--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
             <input type="number" id="input-price" placeholder="Stock bought at" />
             <input type="number" id="input-price" placeholder="Stock current price" />
             <input type="number" id="input-price" placeholder="Stock quantity" />
-            <div class="secondary-output" ></div>
+            <!-- <div class="secondary-output" ></div> -->
             <button id="input-btn">Check P&L</button>
+
+            <div class="pl-popup">
+                <p id="pl-text">Invalid input <button id="pl-close-btn">&times</button> </p>
+            </div>
         
         </div> 
         
