--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div class="primary-container">
-        <img src="./img/bg-primary.svg" class="primary-bg">
+        <img src="./img/bg-primary.svg" class="primary-bg bg-light">
+        <img src="./img/bg-primary-dark.svg" class="primary-bg bg-dark">
         <nav class="navigation">
             <p>Stock Simulator</p>
         </nav>
@@ -25,7 +26,7 @@
             <input type="number" id="input-price" placeholder="Stock bought at" />
             <input type="number" id="input-price" placeholder="Stock current price" />
             <input type="number" id="input-price" placeholder="Stock quantity" />
-            <!-- <div class="secondary-output" ></div> -->
+            
             <button id="input-btn">Check P&L</button>
 
             <div class="pl-popup">
